--- a/.build/index.html
+++ b/.build/index.html
@@ -36,7 +36,7 @@
     <body>
         <div class="atoms">
             <h2>Atoms</h2>
-            <a href="./cases-eng/index.html">cases-eng</a>
+            <a href="./cases-eng/index.html">cases-eng</a><a href="./cases-utla/index.html">cases-utla</a>
         </div>
     </body>
 </html>
