small multiples working

--- a/.build/cases-utla/appInteractive.html
+++ b/.build/cases-utla/appInteractive.html
@@ -30311,14 +30311,48 @@ p.campaign__info {
  <figure class="interactive interactive-atom interactive--loading"> 
 <link rel="stylesheet" type="text/css" href="./main.css" />
         <div class="interactive-wrapper">
-    <div class="gv-headline">England: number of new coronavirus cases per day - estimated and confirmed</div>
-    <div class="gv-subhead"></div>
-    <svg id="gv-svg-col-chart" viewBox="0,0,600,400" style="overflow: visible;"></svg>
-    <div class="source">
-        Note: Line chart based on the average number of new cases per day in a given week. 
-        Cases are assigned to the date of publication.
-        Data: data.gov.uk, updated <span id="gv-col-timestamp"></span>
+
+    <div class="gv-headline">Weekly coronavirus cases - confirmed and estimated</div>
+    <div class="multiple">
+        <div class="gv-headline"><span id="utla-name">Local Authority</span></div>
+        <div class="gv-subhead"></div>
+        <svg id="gv-svg-col-chart" viewBox="0,0,500,350" style="overflow: visible;"></svg>
+
     </div>
+
+    <div class="multiple">
+        <div class="gv-headline"><span id="utla-name"></span></div>
+        <div class="gv-subhead"></div>
+        <svg id="gv-svg-col-chart" viewBox="0,0,500,350" style="overflow: visible;"></svg>
+    </div>
+
+    <div class="multiple">
+        <div class="gv-headline"><span id="utla-name"></span></div>
+        <div class="gv-subhead"></div>
+        <svg id="gv-svg-col-chart" viewBox="0,0,500,350" style="overflow: visible;"></svg>
+    </div>
+
+    <div class="multiple">
+        <div class="gv-headline"><span id="utla-name"></span></div>
+        <div class="gv-subhead"></div>
+        <svg id="gv-svg-col-chart" viewBox="0,0,500,350" style="overflow: visible;"></svg>
+    </div>
+
+    <div class="multiple">
+        <div class="gv-headline"><span id="utla-name"></span></div>
+        <div class="gv-subhead"></div>
+        <svg id="gv-svg-col-chart" viewBox="0,0,500,350" style="overflow: visible;"></svg>
+    </div>
+
+    <div class="multiple">
+        <div class="gv-headline"><span id="utla-name"></span></div>
+        <div class="gv-subhead"></div>
+        <svg id="gv-svg-col-chart" viewBox="0,0,500,350" style="overflow: visible;"></svg>
+    </div>
+    <div class="source">
+        Data: confirmed cases - data.gov.uk, estimated cases - Edge Health, correct as of <span id="gv-col-timestamp"> 22 Nov 2020</span>
+    </div>
+
 </div>
 
         <script>
