--- a/.build/cases-eng/blank.html
+++ b/.build/cases-eng/blank.html
@@ -93,13 +93,20 @@ figure {
 <figure class="interactive interactive-atom">
 <link rel="stylesheet" type="text/css" href="main.css" />
     <div class="interactive-wrapper">
-    <div class="gv-headline">England: number of new coronavirus cases per day - estimated and confirmed</div>
-    <div class="gv-subhead"></div>
-    <svg id="gv-svg-col-chart" viewBox="0,0,600,400" style="overflow: visible;"></svg>
+    <div class="gv-headline">England: people infected with coronavirus - estimated and confirmed</div>
+    <div class="gv-subhead">
+        <div class="info-box">
+            <p><span class="confirmed">-%</span></p>
+            <p>people confirmed infected</p>
+        </div>
+        <div class="info-box">
+            <p><span class="estimated">-%</span></p>
+            <p>people estimated infected</p>
+        </div>
+    </div>
+    <svg id="gv-svg-col-chart" viewBox="0,0,500,400" style="overflow: visible;"></svg>
     <div class="source">
-        Note: Line chart based on the average number of new cases per day in a given week. 
-        Cases are assigned to the date of publication.
-        Data: data.gov.uk, updated <span id="gv-col-timestamp"></span>
+        % infection rate is for all people in the area over the whole course of the pandemic. Data: confirmed cases - data.gov.uk, estimated cases - Edge Health, correct as of <span id="gv-col-timestamp"> 22 Nov 2020</span>
     </div>
 </div>
 
