clean up charts

--- a/.build/cases-eng/article.html
+++ b/.build/cases-eng/article.html
@@ -3277,10 +3277,11 @@ stateChange;script.src=src}else document.write('\x3cscript src\x3d"'+src+'" defe
           flex-wrap: wrap; }
 
 .multiple {
+  margin-top: 20px;
   margin-bottom: 16px;
   -webkit-flex: 0 0 400px;
           flex: 0 0 400px;
-  margin-top: 10px; }
+  margin-right: 10px; }
 
 .gv-subhead {
   display: -webkit-flex;
@@ -3333,9 +3334,6 @@ stateChange;script.src=src}else document.write('\x3cscript src\x3d"'+src+'" defe
 
 .gv-headline {
   margin-bottom: 12px; }
-  @media (min-width: 28.125em) {
-    .gv-headline {
-      margin-bottom: 20px; } }
 
 .timestamp {
   font-size: 16px;
@@ -3363,7 +3361,7 @@ stateChange;script.src=src}else document.write('\x3cscript src\x3d"'+src+'" defe
             &lt;p&gt;people estimated infected&lt;/p&gt;
         &lt;/div&gt;
     &lt;/div&gt;
-    &lt;svg id=&quot;gv-svg-col-chart&quot; viewBox=&quot;0,0,500,400&quot; style=&quot;overflow: visible;&quot;&gt;&lt;/svg&gt;
+    &lt;svg id=&quot;gv-svg-col-chart&quot; viewBox=&quot;0,0,500,350&quot; style=&quot;overflow: visible;&quot;&gt;&lt;/svg&gt;
     &lt;div class=&quot;source&quot;&gt;
         % infection rate is for all people in the area over the whole course of the pandemic. Data: confirmed cases - data.gov.uk, estimated cases - Edge Health, correct as of &lt;span id=&quot;gv-col-timestamp&quot;&gt; 22 Nov 2020&lt;/span&gt;
     &lt;/div&gt;
