--- a/.build/cases-utla/appInteractive.html
+++ b/.build/cases-utla/appInteractive.html
@@ -30352,11 +30352,11 @@ p.campaign__info {
             <div class="gv-subhead">
                 <div class="info-box">
                     <p><span class="confirmed">-%</span></p>
-                    <p>people confirmed infected</p>
+                    <p>confirmed</p>
                 </div>
                 <div class="info-box">
                     <p><span class="estimated">-%</span></p>
-                    <p>people estimated infected</p>
+                    <p>estimated</p>
                 </div>
             </div>
             <svg id="gv-svg-col-chart" viewBox="0,0,500,350" style="overflow: visible;"></svg>
@@ -30367,11 +30367,11 @@ p.campaign__info {
             <div class="gv-subhead">
                 <div class="info-box">
                     <p><span class="confirmed">-%</span></p>
-                    <p>people confirmed infected</p>
+                    <p>confirmed</p>
                 </div>
                 <div class="info-box">
                     <p><span class="estimated">-%</span></p>
-                    <p>people estimated infected</p>
+                    <p>estimated</p>
                 </div>
             </div>
             <svg id="gv-svg-col-chart" viewBox="0,0,500,350" style="overflow: visible;"></svg>
@@ -30382,11 +30382,11 @@ p.campaign__info {
             <div class="gv-subhead">
                 <div class="info-box">
                     <p><span class="confirmed">-%</span></p>
-                    <p>people confirmed infected</p>
+                    <p>confirmed</p>
                 </div>
                 <div class="info-box">
                     <p><span class="estimated">-%</span></p>
-                    <p>people estimated infected</p>
+                    <p>estimated</p>
                 </div>
             </div>
             <svg id="gv-svg-col-chart" viewBox="0,0,500,350" style="overflow: visible;"></svg>
@@ -30397,11 +30397,11 @@ p.campaign__info {
             <div class="gv-subhead">
                 <div class="info-box">
                     <p><span class="confirmed">-%</span></p>
-                    <p>people confirmed infected</p>
+                    <p>confirmed</p>
                 </div>
                 <div class="info-box">
                     <p><span class="estimated">-%</span></p>
-                    <p>people estimated infected</p>
+                    <p>estimated</p>
                 </div>
             </div>
             <svg id="gv-svg-col-chart" viewBox="0,0,500,350" style="overflow: visible;"></svg>
