--- a/.build/cases-utla/article.html
+++ b/.build/cases-utla/article.html
@@ -3277,10 +3277,11 @@ stateChange;script.src=src}else document.write('\x3cscript src\x3d"'+src+'" defe
           flex-wrap: wrap; }
 
 .multiple {
+  margin-top: 20px;
   margin-bottom: 16px;
   -webkit-flex: 0 0 400px;
           flex: 0 0 400px;
-  margin-top: 10px; }
+  margin-right: 10px; }
 
 .gv-subhead {
   display: -webkit-flex;
@@ -3333,9 +3334,6 @@ stateChange;script.src=src}else document.write('\x3cscript src\x3d"'+src+'" defe
 
 .gv-headline {
   margin-bottom: 12px; }
-  @media (min-width: 28.125em) {
-    .gv-headline {
-      margin-bottom: 20px; } }
 
 .timestamp {
   font-size: 16px;
@@ -3393,11 +3391,11 @@ stateChange;script.src=src}else document.write('\x3cscript src\x3d"'+src+'" defe
             &lt;div class=&quot;gv-subhead&quot;&gt;
                 &lt;div class=&quot;info-box&quot;&gt;
                     &lt;p&gt;&lt;span class=&quot;confirmed&quot;&gt;-%&lt;/span&gt;&lt;/p&gt;
-                    &lt;p&gt;people confirmed infected&lt;/p&gt;
+                    &lt;p&gt;confirmed&lt;/p&gt;
                 &lt;/div&gt;
                 &lt;div class=&quot;info-box&quot;&gt;
                     &lt;p&gt;&lt;span class=&quot;estimated&quot;&gt;-%&lt;/span&gt;&lt;/p&gt;
-                    &lt;p&gt;people estimated infected&lt;/p&gt;
+                    &lt;p&gt;estimated&lt;/p&gt;
                 &lt;/div&gt;
             &lt;/div&gt;
             &lt;svg id=&quot;gv-svg-col-chart&quot; viewBox=&quot;0,0,500,350&quot; style=&quot;overflow: visible;&quot;&gt;&lt;/svg&gt;
@@ -3408,11 +3406,11 @@ stateChange;script.src=src}else document.write('\x3cscript src\x3d"'+src+'" defe
             &lt;div class=&quot;gv-subhead&quot;&gt;
                 &lt;div class=&quot;info-box&quot;&gt;
                     &lt;p&gt;&lt;span class=&quot;confirmed&quot;&gt;-%&lt;/span&gt;&lt;/p&gt;
-                    &lt;p&gt;people confirmed infected&lt;/p&gt;
+                    &lt;p&gt;confirmed&lt;/p&gt;
                 &lt;/div&gt;
                 &lt;div class=&quot;info-box&quot;&gt;
                     &lt;p&gt;&lt;span class=&quot;estimated&quot;&gt;-%&lt;/span&gt;&lt;/p&gt;
-                    &lt;p&gt;people estimated infected&lt;/p&gt;
+                    &lt;p&gt;estimated&lt;/p&gt;
                 &lt;/div&gt;
             &lt;/div&gt;
             &lt;svg id=&quot;gv-svg-col-chart&quot; viewBox=&quot;0,0,500,350&quot; style=&quot;overflow: visible;&quot;&gt;&lt;/svg&gt;
@@ -3423,11 +3421,11 @@ stateChange;script.src=src}else document.write('\x3cscript src\x3d"'+src+'" defe
             &lt;div class=&quot;gv-subhead&quot;&gt;
                 &lt;div class=&quot;info-box&quot;&gt;
                     &lt;p&gt;&lt;span class=&quot;confirmed&quot;&gt;-%&lt;/span&gt;&lt;/p&gt;
-                    &lt;p&gt;people confirmed infected&lt;/p&gt;
+                    &lt;p&gt;confirmed&lt;/p&gt;
                 &lt;/div&gt;
                 &lt;div class=&quot;info-box&quot;&gt;
                     &lt;p&gt;&lt;span class=&quot;estimated&quot;&gt;-%&lt;/span&gt;&lt;/p&gt;
-                    &lt;p&gt;people estimated infected&lt;/p&gt;
+                    &lt;p&gt;estimated&lt;/p&gt;
                 &lt;/div&gt;
             &lt;/div&gt;
             &lt;svg id=&quot;gv-svg-col-chart&quot; viewBox=&quot;0,0,500,350&quot; style=&quot;overflow: visible;&quot;&gt;&lt;/svg&gt;
@@ -3438,11 +3436,11 @@ stateChange;script.src=src}else document.write('\x3cscript src\x3d"'+src+'" defe
             &lt;div class=&quot;gv-subhead&quot;&gt;
                 &lt;div class=&quot;info-box&quot;&gt;
                     &lt;p&gt;&lt;span class=&quot;confirmed&quot;&gt;-%&lt;/span&gt;&lt;/p&gt;
-                    &lt;p&gt;people confirmed infected&lt;/p&gt;
+                    &lt;p&gt;confirmed&lt;/p&gt;
                 &lt;/div&gt;
                 &lt;div class=&quot;info-box&quot;&gt;
                     &lt;p&gt;&lt;span class=&quot;estimated&quot;&gt;-%&lt;/span&gt;&lt;/p&gt;
-                    &lt;p&gt;people estimated infected&lt;/p&gt;
+                    &lt;p&gt;estimated&lt;/p&gt;
                 &lt;/div&gt;
             &lt;/div&gt;
             &lt;svg id=&quot;gv-svg-col-chart&quot; viewBox=&quot;0,0,500,350&quot; style=&quot;overflow: visible;&quot;&gt;&lt;/svg&gt;
