--- a/.build/cases-utla/blank.html
+++ b/.build/cases-utla/blank.html
@@ -134,11 +134,11 @@ figure {
             <div class="gv-subhead">
                 <div class="info-box">
                     <p><span class="confirmed">-%</span></p>
-                    <p>people confirmed infected</p>
+                    <p>confirmed</p>
                 </div>
                 <div class="info-box">
                     <p><span class="estimated">-%</span></p>
-                    <p>people estimated infected</p>
+                    <p>estimated</p>
                 </div>
             </div>
             <svg id="gv-svg-col-chart" viewBox="0,0,500,350" style="overflow: visible;"></svg>
@@ -149,11 +149,11 @@ figure {
             <div class="gv-subhead">
                 <div class="info-box">
                     <p><span class="confirmed">-%</span></p>
-                    <p>people confirmed infected</p>
+                    <p>confirmed</p>
                 </div>
                 <div class="info-box">
                     <p><span class="estimated">-%</span></p>
-                    <p>people estimated infected</p>
+                    <p>estimated</p>
                 </div>
             </div>
             <svg id="gv-svg-col-chart" viewBox="0,0,500,350" style="overflow: visible;"></svg>
@@ -164,11 +164,11 @@ figure {
             <div class="gv-subhead">
                 <div class="info-box">
                     <p><span class="confirmed">-%</span></p>
-                    <p>people confirmed infected</p>
+                    <p>confirmed</p>
                 </div>
                 <div class="info-box">
                     <p><span class="estimated">-%</span></p>
-                    <p>people estimated infected</p>
+                    <p>estimated</p>
                 </div>
             </div>
             <svg id="gv-svg-col-chart" viewBox="0,0,500,350" style="overflow: visible;"></svg>
@@ -179,11 +179,11 @@ figure {
             <div class="gv-subhead">
                 <div class="info-box">
                     <p><span class="confirmed">-%</span></p>
-                    <p>people confirmed infected</p>
+                    <p>confirmed</p>
                 </div>
                 <div class="info-box">
                     <p><span class="estimated">-%</span></p>
-                    <p>people estimated infected</p>
+                    <p>estimated</p>
                 </div>
             </div>
             <svg id="gv-svg-col-chart" viewBox="0,0,500,350" style="overflow: visible;"></svg>
