--- a/.build/cases-utla/main.html
+++ b/.build/cases-utla/main.html
@@ -40,11 +40,11 @@
             <div class="gv-subhead">
                 <div class="info-box">
                     <p><span class="confirmed">-%</span></p>
-                    <p>people confirmed infected</p>
+                    <p>confirmed</p>
                 </div>
                 <div class="info-box">
                     <p><span class="estimated">-%</span></p>
-                    <p>people estimated infected</p>
+                    <p>estimated</p>
                 </div>
             </div>
             <svg id="gv-svg-col-chart" viewBox="0,0,500,350" style="overflow: visible;"></svg>
@@ -55,11 +55,11 @@
             <div class="gv-subhead">
                 <div class="info-box">
                     <p><span class="confirmed">-%</span></p>
-                    <p>people confirmed infected</p>
+                    <p>confirmed</p>
                 </div>
                 <div class="info-box">
                     <p><span class="estimated">-%</span></p>
-                    <p>people estimated infected</p>
+                    <p>estimated</p>
                 </div>
             </div>
             <svg id="gv-svg-col-chart" viewBox="0,0,500,350" style="overflow: visible;"></svg>
@@ -70,11 +70,11 @@
             <div class="gv-subhead">
                 <div class="info-box">
                     <p><span class="confirmed">-%</span></p>
-                    <p>people confirmed infected</p>
+                    <p>confirmed</p>
                 </div>
                 <div class="info-box">
                     <p><span class="estimated">-%</span></p>
-                    <p>people estimated infected</p>
+                    <p>estimated</p>
                 </div>
             </div>
             <svg id="gv-svg-col-chart" viewBox="0,0,500,350" style="overflow: visible;"></svg>
@@ -85,11 +85,11 @@
             <div class="gv-subhead">
                 <div class="info-box">
                     <p><span class="confirmed">-%</span></p>
-                    <p>people confirmed infected</p>
+                    <p>confirmed</p>
                 </div>
                 <div class="info-box">
                     <p><span class="estimated">-%</span></p>
-                    <p>people estimated infected</p>
+                    <p>estimated</p>
                 </div>
             </div>
             <svg id="gv-svg-col-chart" viewBox="0,0,500,350" style="overflow: visible;"></svg>
