--- a/.build/cases-utla/main.html
+++ b/.build/cases-utla/main.html
@@ -9,30 +9,15 @@
             <div class="gv-subhead">
                 <div class="info-box">
                     <p><span class="confirmed">-%</span></p>
-                    <p>people confirmed infected</p>
+                    <p>confirmed</p>
                 </div>
                 <div class="info-box">
                     <p><span class="estimated">-%</span></p>
-                    <p>people estimated infected</p>
+                    <p>estimated</p>
                 </div>
             </div>
-            <svg id="gv-svg-col-chart" viewBox="0,0,500,350" style="overflow: visible;"></svg>
+            <svg id="gv-svg-col-chart" viewBox="0,0,400,200" width="400" height="200" style="overflow: visible;"></svg>
 
-        </div>
-
-        <div class="multiple">
-            <div class="gv-headline"><span id="utla-name"></span></div>
-            <div class="gv-subhead">
-                <div class="info-box">
-                    <p><span class="confirmed">-%</span></p>
-                    <p>people confirmed infected</p>
-                </div>
-                <div class="info-box">
-                    <p><span class="estimated">-%</span></p>
-                    <p>people estimated infected</p>
-                </div>
-            </div>
-            <svg id="gv-svg-col-chart" viewBox="0,0,500,350" style="overflow: visible;"></svg>
         </div>
 
         <div class="multiple">
@@ -47,7 +32,7 @@
                     <p>estimated</p>
                 </div>
             </div>
-            <svg id="gv-svg-col-chart" viewBox="0,0,500,350" style="overflow: visible;"></svg>
+            <svg id="gv-svg-col-chart" viewBox="0,0,400,200" width="400" height="200" style="overflow: visible;"></svg>
         </div>
 
         <div class="multiple">
@@ -62,7 +47,7 @@
                     <p>estimated</p>
                 </div>
             </div>
-            <svg id="gv-svg-col-chart" viewBox="0,0,500,350" style="overflow: visible;"></svg>
+            <svg id="gv-svg-col-chart" viewBox="0,0,400,200" width="400" height="200" style="overflow: visible;"></svg>
         </div>
 
         <div class="multiple">
@@ -77,7 +62,7 @@
                     <p>estimated</p>
                 </div>
             </div>
-            <svg id="gv-svg-col-chart" viewBox="0,0,500,350" style="overflow: visible;"></svg>
+            <svg id="gv-svg-col-chart" viewBox="0,0,400,200" width="400" height="200" style="overflow: visible;"></svg>
         </div>
 
         <div class="multiple">
@@ -92,7 +77,22 @@
                     <p>estimated</p>
                 </div>
             </div>
-            <svg id="gv-svg-col-chart" viewBox="0,0,500,350" style="overflow: visible;"></svg>
+            <svg id="gv-svg-col-chart" viewBox="0,0,400,200" width="400" height="200" style="overflow: visible;"></svg>
+        </div>
+
+        <div class="multiple">
+            <div class="gv-headline"><span id="utla-name"></span></div>
+            <div class="gv-subhead">
+                <div class="info-box">
+                    <p><span class="confirmed">-%</span></p>
+                    <p>confirmed</p>
+                </div>
+                <div class="info-box">
+                    <p><span class="estimated">-%</span></p>
+                    <p>estimated</p>
+                </div>
+            </div>
+            <svg id="gv-svg-col-chart" viewBox="0,0,400,200" width="400" height="200" style="overflow: visible;"></svg>
         </div>
     </div>
     <div class="source">
