Mobile views working

--- a/.build/cases-eng/main.html
+++ b/.build/cases-eng/main.html
@@ -1,16 +1,16 @@
 <div class="interactive-wrapper">
-    <div class="gv-headline">England: people infected with coronavirus - estimated and confirmed</div>
+    <div class="gv-headline">England: people infected with coronavirus</div>
     <div class="gv-subhead">
         <div class="info-box">
-            <p><span class="confirmed">-%</span></p>
-            <p>people confirmed infected</p>
+            <p><span class="confirmed">--</span></p>
+            <p>confirmed</p>
         </div>
         <div class="info-box">
-            <p><span class="estimated">-%</span></p>
-            <p>people estimated infected</p>
+            <p><span class="estimated">--</span></p>
+            <p>estimated</p>
         </div>
     </div>
-    <svg id="gv-svg-col-chart" viewBox="0,0,800,400" width="800" height="400" style="overflow: visible;"></svg>
+    <svg id="gv-svg-col-chart" viewBox="0,0,600,400" style="overflow: visible;"></svg>
     <div class="source">
         % infection rate is for all people in the area over the whole course of the pandemic. Data: confirmed cases - data.gov.uk, estimated cases - Edge Health, correct as of <span id="gv-col-timestamp"> 22 Nov 2020</span>
     </div>
