--- a/.build/cases-utla/main.html
+++ b/.build/cases-utla/main.html
@@ -8,15 +8,15 @@
             <div class="gv-headline"><span id="utla-name">Local Authority</span></div>
             <div class="gv-subhead">
                 <div class="info-box">
-                    <p><span class="confirmed">-%</span></p>
+                    <p><span class="confirmed">--</span></p>
                     <p>confirmed</p>
                 </div>
                 <div class="info-box">
-                    <p><span class="estimated">-%</span></p>
+                    <p><span class="estimated">--</span></p>
                     <p>estimated</p>
                 </div>
             </div>
-            <svg id="gv-svg-col-chart" viewBox="0,0,400,200" width="400" height="200" style="overflow: visible;"></svg>
+            <svg id="gv-svg-col-chart" viewBox="0,0,300,250" width="300" height="250" style="overflow: visible;"></svg>
 
         </div>
 
@@ -24,75 +24,75 @@
             <div class="gv-headline"><span id="utla-name"></span></div>
             <div class="gv-subhead">
                 <div class="info-box">
-                    <p><span class="confirmed">-%</span></p>
+                    <p><span class="confirmed">--</span></p>
                     <p>confirmed</p>
                 </div>
                 <div class="info-box">
-                    <p><span class="estimated">-%</span></p>
+                    <p><span class="estimated">--</span></p>
                     <p>estimated</p>
                 </div>
             </div>
-            <svg id="gv-svg-col-chart" viewBox="0,0,400,200" width="400" height="200" style="overflow: visible;"></svg>
+            <svg id="gv-svg-col-chart" viewBox="0,0,300,250" width="300" height="250" style="overflow: visible;"></svg>
         </div>
 
         <div class="multiple">
             <div class="gv-headline"><span id="utla-name"></span></div>
             <div class="gv-subhead">
                 <div class="info-box">
-                    <p><span class="confirmed">-%</span></p>
+                    <p><span class="confirmed">--</span></p>
                     <p>confirmed</p>
                 </div>
                 <div class="info-box">
-                    <p><span class="estimated">-%</span></p>
+                    <p><span class="estimated">--</span></p>
                     <p>estimated</p>
                 </div>
             </div>
-            <svg id="gv-svg-col-chart" viewBox="0,0,400,200" width="400" height="200" style="overflow: visible;"></svg>
+            <svg id="gv-svg-col-chart" viewBox="0,0,300,250" width="300" height="250" style="overflow: visible;"></svg>
         </div>
 
         <div class="multiple">
             <div class="gv-headline"><span id="utla-name"></span></div>
             <div class="gv-subhead">
                 <div class="info-box">
-                    <p><span class="confirmed">-%</span></p>
+                    <p><span class="confirmed">--</span></p>
                     <p>confirmed</p>
                 </div>
                 <div class="info-box">
-                    <p><span class="estimated">-%</span></p>
+                    <p><span class="estimated">--</span></p>
                     <p>estimated</p>
                 </div>
             </div>
-            <svg id="gv-svg-col-chart" viewBox="0,0,400,200" width="400" height="200" style="overflow: visible;"></svg>
+            <svg id="gv-svg-col-chart" viewBox=viewBox="0,0,300,250" width="300" height="250" style="overflow: visible;"></svg>
         </div>
 
         <div class="multiple">
             <div class="gv-headline"><span id="utla-name"></span></div>
             <div class="gv-subhead">
                 <div class="info-box">
-                    <p><span class="confirmed">-%</span></p>
+                    <p><span class="confirmed">--</span></p>
                     <p>confirmed</p>
                 </div>
                 <div class="info-box">
-                    <p><span class="estimated">-%</span></p>
+                    <p><span class="estimated">--</span></p>
                     <p>estimated</p>
                 </div>
             </div>
-            <svg id="gv-svg-col-chart" viewBox="0,0,400,200" width="400" height="200" style="overflow: visible;"></svg>
+            <svg id="gv-svg-col-chart" viewBox="0,0,300,250" width="300" height="250" style="overflow: visible;"></svg>
         </div>
 
         <div class="multiple">
             <div class="gv-headline"><span id="utla-name"></span></div>
             <div class="gv-subhead">
                 <div class="info-box">
-                    <p><span class="confirmed">-%</span></p>
+                    <p><span class="confirmed">--</span></p>
                     <p>confirmed</p>
                 </div>
                 <div class="info-box">
-                    <p><span class="estimated">-%</span></p>
+                    <p><span class="estimated">--</span></p>
                     <p>estimated</p>
                 </div>
             </div>
-            <svg id="gv-svg-col-chart" viewBox="0,0,400,200" width="400" height="200" style="overflow: visible;"></svg>
+            <svg id="gv-svg-col-chart" viewBox="0,0,300,250" width="300" height="250" style="overflow: visible;"></svg>
         </div>
     </div>
     <div class="source">
