--- a/.build/cases-eng/main.html
+++ b/.build/cases-eng/main.html
@@ -1,4 +1,4 @@
-<div class="interactive-wrapper">
+<div class="interactive-wrapper eng-graph">
     <div class="gv-headline">England: people infected with coronavirus</div>
     <div class="gv-subhead">
         <div class="info-box">
@@ -6,12 +6,12 @@
             <p>confirmed</p>
         </div>
         <div class="info-box">
-            <p><span class="estimated">--</span></p>
+            <div><span class="estimated">--</span></div>
             <p>estimated</p>
         </div>
     </div>
     <svg id="gv-svg-col-chart" viewBox="0,0,600,400" style="overflow: visible;"></svg>
     <div class="source">
-        % infection rate is for all people in the area over the whole course of the pandemic. Data: confirmed cases - data.gov.uk, estimated cases - Edge Health, correct as of <span id="gv-col-timestamp"> 22 Nov 2020</span>
+        % infection rate for all people in England over the course of the pandemic. Data: confirmed cases - data.gov.uk, estimated cases - Edge Health. 
     </div>
 </div>
