fallback for animation in safari

--- a/.build/cases-eng/main.html
+++ b/.build/cases-eng/main.html
@@ -1,13 +1,13 @@
 <div class="interactive-wrapper eng-graph">
-    <div class="gv-headline">England: people infected with coronavirus</div>
+    <div class="gv-headline">England: infections could be 10 times higher than offical numbers</div>
     <div class="gv-subhead">
         <div class="info-box">
             <p><span class="confirmed">--</span></p>
-            <p>confirmed</p>
+            <p>people confirmed infected</p>
         </div>
         <div class="info-box">
             <div><span class="estimated">--</span></div>
-            <p>estimated</p>
+            <p>people estimated infected</p>
         </div>
     </div>
     <svg id="gv-svg-col-chart" viewBox="0,0,600,400" style="overflow: visible;"></svg>
