--- a/.build/cases-utla/main.html
+++ b/.build/cases-utla/main.html
@@ -1,19 +1,22 @@
 <div class="interactive-wrapper">
 
-    <div class="gv-headline">England's worst-hit areas</div>
-    <div class="gv-subhead-top">People infected with coronavirus - confirmed and estimated</div>
+    <div class="gv-headline">New figures reveal England's worst-hit areas</div>
+    <div class="gv-subhead-top">
+        London borough Brent comes out as worst affected when estimates for "missing cases"
+         are factored in.
+    </div>
 
     <div class="multiple-container">
         <div class="multiple">
             <div class="gv-headline"><span id="utla-name">Local Authority</span></div>
             <div class="gv-subhead">
                 <div class="info-box">
-                    <p><span class="confirmed">--</span></p>
-                    <p>confirmed</p>
-                </div>
-                <div class="info-box">
                     <p><span class="estimated">--</span></p>
                     <p>estimated</p>
+                </div>
+                <div class="info-box">
+                    <p><span class="confirmed">--</span></p>
+                    <p>confirmed</p>
                 </div>
             </div>
             <svg id="gv-svg-col-chart" viewBox="0,0,300,250" width="300" height="250" style="overflow: visible;"></svg>
@@ -24,12 +27,12 @@
             <div class="gv-headline"><span id="utla-name"></span></div>
             <div class="gv-subhead">
                 <div class="info-box">
-                    <p><span class="confirmed">--</span></p>
-                    <p>confirmed</p>
-                </div>
-                <div class="info-box">
                     <p><span class="estimated">--</span></p>
                     <p>estimated</p>
+                </div>
+                <div class="info-box">
+                    <p><span class="confirmed">--</span></p>
+                    <p>confirmed</p>
                 </div>
             </div>
             <svg id="gv-svg-col-chart" viewBox="0,0,300,250" width="300" height="250" style="overflow: visible;"></svg>
@@ -39,12 +42,12 @@
             <div class="gv-headline"><span id="utla-name"></span></div>
             <div class="gv-subhead">
                 <div class="info-box">
-                    <p><span class="confirmed">--</span></p>
-                    <p>confirmed</p>
-                </div>
-                <div class="info-box">
                     <p><span class="estimated">--</span></p>
                     <p>estimated</p>
+                </div>
+                <div class="info-box">
+                    <p><span class="confirmed">--</span></p>
+                    <p>confirmed</p>
                 </div>
             </div>
             <svg id="gv-svg-col-chart" viewBox="0,0,300,250" width="300" height="250" style="overflow: visible;"></svg>
@@ -54,12 +57,12 @@
             <div class="gv-headline"><span id="utla-name"></span></div>
             <div class="gv-subhead">
                 <div class="info-box">
-                    <p><span class="confirmed">--</span></p>
-                    <p>confirmed</p>
-                </div>
-                <div class="info-box">
                     <p><span class="estimated">--</span></p>
                     <p>estimated</p>
+                </div>
+                <div class="info-box">
+                    <p><span class="confirmed">--</span></p>
+                    <p>confirmed</p>
                 </div>
             </div>
             <svg id="gv-svg-col-chart" viewBox=viewBox="0,0,300,250" width="300" height="250" style="overflow: visible;"></svg>
@@ -69,12 +72,12 @@
             <div class="gv-headline"><span id="utla-name"></span></div>
             <div class="gv-subhead">
                 <div class="info-box">
-                    <p><span class="confirmed">--</span></p>
-                    <p>confirmed</p>
-                </div>
-                <div class="info-box">
                     <p><span class="estimated">--</span></p>
                     <p>estimated</p>
+                </div>
+                <div class="info-box">
+                    <p><span class="confirmed">--</span></p>
+                    <p>confirmed</p>
                 </div>
             </div>
             <svg id="gv-svg-col-chart" viewBox="0,0,300,250" width="300" height="250" style="overflow: visible;"></svg>
@@ -84,19 +87,19 @@
             <div class="gv-headline"><span id="utla-name"></span></div>
             <div class="gv-subhead">
                 <div class="info-box">
-                    <p><span class="confirmed">--</span></p>
-                    <p>confirmed</p>
-                </div>
-                <div class="info-box">
                     <p><span class="estimated">--</span></p>
                     <p>estimated</p>
+                </div>
+                <div class="info-box">
+                    <p><span class="confirmed">--</span></p>
+                    <p>confirmed</p>
                 </div>
             </div>
             <svg id="gv-svg-col-chart" viewBox="0,0,300,250" width="300" height="250" style="overflow: visible;"></svg>
         </div>
     </div>
     <div class="source">
-        % infection rate is for all people in the area over the whole course of the pandemic. Data: confirmed cases - data.gov.uk, estimated cases - Edge Health, correct as of <span id="gv-col-timestamp"> 22 Nov 2020</span>
+        % of the population who have been infected by coronavirus over the course of the pandemic. Data: confirmed cases - data.gov.uk, estimated cases - Edge Health, correct as of <span id="gv-col-timestamp"> 22 Nov 2020</span>
     </div>
 
 </div>
