--- a/.build/cases-eng/main.html
+++ b/.build/cases-eng/main.html
@@ -1,17 +1,22 @@
 <div class="interactive-wrapper eng-graph">
-    <div class="gv-headline">England: infections could be 10 times higher than offical numbers</div>
+    <div class="gv-headline">Infections in England could be 10 times higher than official recorded numbers</div>
+    <div class="gv-subhead-top">
+        Official, recorded cases compared to estimated total cases in England
+    </div>
     <div class="gv-subhead">
         <div class="info-box">
-            <div><span class="estimated">--</span></div>
+            <div><span class="estimated">&nbsp;</span></div>
             <p>estimated</p>
         </div>
         <div class="info-box">
-            <p><span class="confirmed">--</span></p>
-            <p>confirmed</p>
+            <p><span class="recorded">&nbsp;</span></p>
+            <p>recorded</p>
         </div>
     </div>
     <svg id="gv-svg-col-chart" viewBox="0,0,600,400" style="overflow: visible;"></svg>
     <div class="source">
-        % of the population of England who have been infected by coronavirus over the course of the pandemic. Data: estimated cases - Edge Health, confirmed cases - data.gov.uk, correct as of <span id="gv-col-timestamp"> 22 Nov 2020</span>
+        % of the population of England who have been infected by coronavirus over the course of the pandemic. 
+        Data: Estimated cases from Edge Health. Recorded cases from data.gov.uk. 
+        Correct as of <span id="gv-col-timestamp"> 22 Nov 2020</span>
     </div>
 </div>
